index.css
#about,
#services,
#testimonials,
#contact {
    padding-top: 100px;
    padding-bottom: 80px;
}

#services h1,
#testimonials,
#contact h1,
#contact p {
    text-align: center;
}

#services h1,
#testimonials h1 {
    margin-bottom: 40px;
}

#jumbotron-carousel button,
#call-to-action button,
#contact button {
    padding-left: 25px;
    padding-right: 25px;
    color: #000;
    background-color: #5ce045;
    border: 2px solid #4bbb38;
}

#jumbotron-carousel button:hover,
#call-to-action button:hover,
#contact button:hover {
    background-color: #4bbb38;
}

.dark-bg {
    background-color: #1f2121;
}

.clear {
    clear: both;
}

/* Navbar */

#navbar {
    border-bottom: 1px solid #434646;
}

#navbar nav {
    padding: 1rem;
}

.navbar-nav {
    margin: 0 0 0 auto;
}

#navbar img {
    height: 70px;
}

#navbar div a {
    font-size: 18px;
    text-decoration: none;
    color: #f8f9fa;
    margin: 0 1.5rem;
    transition: 0.3s all;
    text-align: right;
}

#navbar nav a.active,
#navbar nav a:hover {
    color: #52cb3c !important;
}

.nav-item .nav-link {
    margin-right: 0 !important;
}

.nav-item:last-child .nav-link,
.nav-item:last-child .nav-link a {
    padding-right: 0 !important;
}

@media (min-width: 768px) and (max-width: 991px) {
    #navbar nav {
        padding: 1.3rem;
    }
    
    #navbar nav div a {
        font-size: 16px;
        margin: 0 0.75rem;
    }
    
    #navbar img {
        height: 60px;
    }
}

/* Jumbotron */

#jumbotron-carousel {
    margin-top: 103px;
}

.carousel-item {
    height: 600px;
}

.carousel-item:nth-child(1) {
    background-image: url(images/carousel-1.jpg);
    background-position: center center;
    background-size: cover;
}

.carousel-item:nth-child(2) {
    background-image: url(images/carousel-2.jpg);
    background-position: center center;
    background-size: cover;
}

.carousel-item:nth-child(3) {
    background-image: url(images/carousel-3.jpg);
    background-position: center center;
    background-size: cover;
}

.carousel-item:nth-child(4) {
    background-image: url(images/carousel-4.jpg);
    background-position: center center;
    background-size: cover;
}

.carousel-item > .outer-container {
    display: table;
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
}

.carousel-item > .outer-container > .vertical-align {
    display: table-cell;
    vertical-align: middle;
}

.carousel-item > .outer-container > .vertical-align > .container {
    margin: 0 auto;
    text-align: center;
}

#jumbotron-carousel .container {
    color: white;
}

@media (max-width: 550px) {
  #jumbotron-carousel h1 {
      font-size: 50px;
  }
  #jumbotron-carousel p {
      font-size: 16px;
      margin-bottom: 30px;
  }
}

@media (min-width: 551px) {
  #jumbotron-carousel h1 {
      font-size: 80px;
  }
  #jumbotron-carousel p {
      font-size: 20px;
      margin-bottom: 30px;
  }
}

@media (max-width: 991px) {
    #jumbotron-carousel p {
        max-width: 500px;
        margin-left: auto;
        margin-right: auto;
    }
}

/* About */

@media (max-width: 768px) {
  #about h1 {
      margin-bottom: 15px;
      text-align: center;
  }
}

@media (min-width: 769px) {
  #about h1 {
      margin-bottom: 15px;
  }
}

.image1 {
    width: 500px;
}

.image2 {
   display: none;
}

@media (min-width: 769px) and (max-width: 991px) {
    #about .image1 {
        width: 325px;
    }
}

@media (max-width: 768px) {
    #about .image1 {
        display: none;
    }

    .image1col {
        display: none;
    }

    .image2 {
        padding-top: 15px;
        display: block;
        width: 100%;
    }

    #about p {
        text-align: center;
    }
}

#about p {
    margin: 0;
}

/* Call-to-Action */

#call-to-action {
    padding: 50px 0;
}

#call-to-action h1 {
    float: left;
    margin-bottom: 0;
}

#call-to-action a {
    float: right;
}

@media (min-width: 992px) and (max-width: 1199px) {
    #call-to-action h1 {
        width: 500px;
    }
    
    #call-to-action a {
        margin: 23px 0;
    }
}

@media (min-width: 769px) and (max-width: 991px) {
    #call-to-action h1 {
        font-size: 2rem;
        width: 400px;
    }
    
    #call-to-action a {
        margin: 13px 0;
    }
}

@media (max-width: 768px) {
    #call-to-action {
        text-align: center;
    }
    
    #call-to-action h1 {
        margin-bottom: 25px;
    }
    
    #call-to-action a {
        float: none;
    }
}

@media (min-width: 426px) and (max-width: 518px) {
    #call-to-action h1 {
        font-size: 2rem;
    }
}

@media (max-width: 425px) {
    #call-to-action h1 {
        font-size: 1.75rem;
    }
}

/* Services */

@media (min-width: 1200px) {
  #services .service-img {
      width: 300px;
      height: 300px;
      background-position: center center;
      background-repeat: no-repeat;
      background-size: cover;
  }

  #services .col-6 {
      text-align: center;
      padding: 15px;
      width: calc(33.333%);
  }
  #services .col-6 > div {
      cursor: pointer;
      padding: 30px;
      background-color: #dbdbdb;
      box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.2);
      transition: 0.3s all;
  }

}

@media (min-width: 992px) and (max-width: 1199px) {
    #services .service-img {
        width: 100%;
        height: 200px;
        background-position: center center;
        background-repeat: no-repeat;
        background-size: cover;
    }

    #services .col-6 > div {
        cursor: pointer;
        padding: 30px;
        background-color: #dbdbdb;
        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.2);
        transition: 0.3s all;
    }

    .col-services {
        padding-top: 30px;
    }

    #services .col-6 h3 {
        font-size: 1.6rem;
    }
}

@media (min-width: 992px) {
    #services h3 {
        text-align: center;
    }
}

@media (max-width: 991px) {
  #services .service-img {
      width: 100%;
      height: 200px;
      background-position: center center;
      background-repeat: no-repeat;
      background-size: cover;
  }
  .col-services{
    flex: 0 0 60%;
    max-width: 50%;
  }

  #services .col-6 {
      text-align: center;
      padding: 15px;
      width: calc(33.333%);
  }
  #services .col-6 > div {
      cursor: pointer;
      padding: 30px;
      background-color: #dbdbdb;
      box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.2);
      transition: 0.3s all;
  }
}

@media (max-width: 550px) {
    #services .service-img {
        width: 100%;
        height: 200px;
        background-position: center center;
        background-repeat: no-repeat;
        background-size: cover;
    }

    #services .col-6 {
        text-align: center;
        width: calc(33.333%);
    }

    .services-inside{
        padding: 10px;
    }
    
    #services .col-6 > div {
        cursor: pointer;
        padding: 10px;
        background-color: #dbdbdb;
        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.2);
        transition: 0.3s all;
    }
    
    #services .col-6:nth-child(1),
    #services .col-6:nth-child(3),
    #services .col-6:nth-child(5) {
        padding: 7.5px 7.5px 7.5px 15px; 
    }
    
    #services .col-6:nth-child(2),
    #services .col-6:nth-child(4),
    #services .col-6:nth-child(6) {
        padding: 7.5px 15px 7.5px 7.5px; 
    }
}

@media (max-width: 400px) {
    #services .service-img {
        height: 150px;
    }
    
    #services h3 {
        font-size: 1.25rem;
    }
}

#services .col-6 > div:hover {
    transform: translateY(-10px);
    box-shadow: 0 22px 43px rgba(0, 0, 0, 0.15);
}

#services h3 {
    margin: 16px 0 8px 0;
}

#services #sitework .service-img {
    background-image: url(images/sitework.jpg);
}

#services #utilities .service-img {
    background-image: url(images/utilities.jpg);
}

#services #demolition .service-img {
    background-image: url(images/demolition.jpg);
}

#services #concrete .service-img {
    background-image: url(images/concrete.jpg);
}

#services #drainage-systems .service-img {
    background-image: url(images/drainage-systems.jpg);
}

#services #project-reclamation .service-img {
    background-image: url(images/project-reclamation.jpg);
}

/* Testimonials */

@media (max-width: 992px) {
  #testimonials .col {
    margin-bottom: 30px;
    padding: 30px;
    background-color: #676c6c;
    box-shadow: 0px 1px 1px rgba(255, 255, 255, 0.2);
    transition: 0.3s all;
  }
  #testimonials .row {
    display: inline-block;
    padding-left: 25px;
    padding-right: 25px;
  }
}

@media (min-width: 993px) {
  #testimonials .col {
      margin: 30px;
      padding: 30px;
      background-color: #676c6c;
      box-shadow: 0px 1px 1px rgba(255, 255, 255, 0.2);
      transition: 0.3s all;
  }
}

#testimonials h1,
#testimonials p {
    color: #fff;
}

#testimonials h5 {
    color: #5ce045;
}


#testimonials .col:hover {
    transform: translateY(-10px);
    box-shadow: 0 22px 43px rgba(255, 255, 255, 0.15);
}

/* Contact */

@media (max-width: 400px) {
  #contact .container{
    width: 100%;
    padding-left: 15px;
    padding-right: 15px;
  }
}

@media (min-width: 401px) {
  #contact > .container {
      width: 70%;
  }
}

#contact p {
    margin-bottom: 40px;
}

#contact-submit,
#contact-submit.disabled {
    transition: 0.5s all;
}

#contact-submit.disabled {
    cursor: not-allowed;
    background-color: grey;
    border: 2px solid grey;
}

#contact-submit.disabled:hover {
    background-color: #7c7c7c;
}

#contact-submit.disabled:focus {
    outline: 0 !important;
    -webkit-box-shadow: none !important;
    box-shadow: none !important;
}

/* Footer */

@media (max-width: 424px) {
    #footer > .container > .left,
    #footer > .container > .right {
        text-align: center;
    }
}

@media (min-width: 425px) {
    #footer > .container > .left {
        float: left;
        text-align: left;
    }

    #footer > .container > .right {
        float: right;
        text-align: right;
    }
}

#footer > .container {
    padding-top: 15px;
    padding-bottom: 15px;
}

#footer p {
    margin: 2.5px 0;
}

#footer a {
    color: #5ce045;
}

#footer a:hover {
    color: #4bbb38;
}

/* Modals */

.modal .modal-body img {
    width: 100%;
}

.modal .modal-body p {
    text-align: center;
    margin: 1rem 0;
}

